--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -1,32 +1,22 @@
 name: 'Run tests 🧪'
 
 on:
-  push:
-    branches:
-      - main
-
   pull_request:
     branches:
       - main
 
-jobs:
-  main:
-    name: 'Nx Cloud - Main'
-    uses: nrwl/ci/.github/workflows/nx-cloud-main.yml@v0.7
-    with:
-      number-of-agents: 3
-      init-commands: |
-        pnpm exec nx-cloud start-ci-run --stop-agents-after="build" --agent-count=3
-      parallel-commands: |
-        pnpm exec nx-cloud record -- pnpm exec nx workspace-lint
-        pnpm exec nx-cloud record -- pnpm exec nx format:check
-      parallel-commands-on-agents: |
-        pnpm exec nx affected --target=lint --parallel=3
-        pnpm exec nx affected --target=test --parallel=3 --ci --code-coverage
-        pnpm exec nx affected --target=build --parallel=3
+  workflow_call:
 
-  agents:
-    name: 'Nx Cloud - Agents'
-    uses: nrwl/ci/.github/workflows/nx-cloud-agents.yml@v0.7
-    with:
-      number-of-agents: 3
+jobs:
+  test:
+    runs-on: ubuntu-22.04
+    steps:
+      - uses: actions/checkout@v3
+
+      - uses: myparcelnl/actions/pnpm-install@v2
+
+      - run: pnpm run test
+
+      - uses: myparcelnl/actions/update-coverage@v2
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
