--- a/nx.json
+++ b/nx.json
@@ -1,4 +1,49 @@
 {
+  "$schema": "./node_modules/nx/schemas/nx-schema.json",
+  "defaultBase": "main",
+  "namedInputs": {
+    "default": [
+      "{projectRoot}/**/*",
+      "sharedGlobals"
+    ],
+    "sharedGlobals": [ ],
+    "production": [
+      "default"
+    ]
+  },
+  "targetDefaults": {
+    "build": {
+      "dependsOn": [
+        "^build"
+      ],
+      "outputs": [
+        "{projectRoot}/lib"
+      ]
+    },
+    "buildOnly": {
+      "dependsOn": [
+        "^buildOnly"
+      ],
+      "outputs": [
+        "{projectRoot}/lib"
+      ]
+    },
+    "dev": {
+      "dependsOn": [
+        "^dev"
+      ]
+    },
+    "test": {
+      "outputs": [
+        "{projectRoot}/coverage"
+      ]
+    },
+    "clean": {
+      "outputs": [
+        "{projectRoot}/lib"
+      ]
+    }
+  },
   "tasksRunnerOptions": {
     "default": {
       "runner": "nx/tasks-runners/default",
@@ -6,27 +51,11 @@
         "cacheableOperations": [
           "build",
           "buildOnly",
+          "clean",
+          "typecheck",
           "test"
         ]
       }
     }
-  },
-  "targetDefaults": {
-    "build": {
-      "dependsOn": [
-        "^build"
-      ]
-    },
-    "buildOnly": {
-      "dependsOn": [
-        "^buildOnly"
-      ]
-    },
-    "dev": {
-      "dependsOn": [
-        "^dev"
-      ]
-    }
-  },
-  "defaultBase": "main"
+  }
 }
