--- a/packages/demo/package.json
+++ b/packages/demo/package.json
@@ -2,15 +2,14 @@
   "name": "@myparcel/vue-form-builder-demo",
   "version": "0.0.0",
   "scripts": {
-    "build": "pnpm run typecheck && pnpm run buildOnly",
+    "build": "yarn typecheck && yarn buildOnly",
     "buildOnly": "vite build",
-    "typecheck": "vue-tsc --noEmit",
     "dev": "vite",
-    "preview": "vite preview --port 4173"
+    "preview": "vite preview --port 4173",
+    "typecheck": "vue-tsc --noEmit"
   },
   "dependencies": {
     "@myparcel/vue-form-builder": "workspace:*",
-    "@myparcel/vue-form-builder-shared": "workspace:*",
     "@vueuse/core": "^9.3.1",
     "tailwindcss": "^3.1.8",
     "vue-router": "^4.1.5"
