--- a/nx.json
+++ b/nx.json
@@ -1,6 +1,7 @@
 {
   "$schema": "./node_modules/nx/schemas/nx-schema.json",
   "defaultBase": "main",
+  "defaultProject": "@myparcel/vue-form-builder-demo",
   "namedInputs": {
     "default": [
       "{projectRoot}/**/*",
@@ -28,9 +29,9 @@
         "{projectRoot}/lib"
       ]
     },
-    "dev": {
+    "serve": {
       "dependsOn": [
-        "^dev"
+        "^buildOnly"
       ]
     },
     "test": {
