--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   ],
   "scripts": {
     "build": "nx run-many --target=build",
+    "build:dev": "nx run-many --target=build:dev",
     "buildOnly": "nx run-many --target=buildOnly",
     "clean": "nx run-many --target=clean",
     "serve": "nx serve",
