--- a/nx.json
+++ b/nx.json
@@ -1,17 +1,7 @@
 {
   "$schema": "./node_modules/nx/schemas/nx-schema.json",
   "defaultBase": "main",
-  "defaultProject": "@myparcel/vue-form-builder-demo",
-  "namedInputs": {
-    "default": [
-      "{projectRoot}/**/*",
-      "sharedGlobals"
-    ],
-    "sharedGlobals": [ ],
-    "production": [
-      "default"
-    ]
-  },
+  "defaultProject": "@myparcel/vue-form-builder",
   "targetDefaults": {
     "build:dev": {
       "dependsOn": [
@@ -38,9 +28,6 @@
       ]
     },
     "serve": {
-      "dependsOn": [
-        "^build:dev"
-      ],
       "outputs": [
         "{projectRoot}/lib"
       ]
@@ -48,11 +35,6 @@
     "test": {
       "outputs": [
         "{projectRoot}/coverage"
-      ]
-    },
-    "clean": {
-      "outputs": [
-        "{projectRoot}/lib"
       ]
     }
   },
@@ -62,10 +44,10 @@
       "options": {
         "cacheableOperations": [
           "build",
+          "build:dev",
           "buildOnly",
-          "clean",
-          "typecheck",
-          "test"
+          "test",
+          "typecheck"
         ]
       }
     }
