--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -3,18 +3,13 @@ name: 'Release 🚀'
 on:
   push:
     branches:
-      - main
+      - alpha
+      - beta
 
 jobs:
-  test:
-    name: 'Run tests 🧪'
-    uses: ./.github/workflows/run-tests.yml
-
   release:
     name: 'Publish new release 🚀'
     runs-on: ubuntu-22.04
-    needs:
-      - test
     steps:
       - uses: actions/checkout@v3
         with:
@@ -23,5 +18,7 @@ jobs:
       - uses: myparcelnl/actions/setup-git-credentials@v2
         with:
           token: ${{ secrets.GH_REPO_TOKEN }}
+
+      - uses: myparcelnl/actions/yarn2-install@v2
 
       - uses: myparcelnl/actions/semantic-release@v2
