--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@myparcel/vue-form-builder",
+  "private": true,
   "version": "0.0.0",
   "license": "MIT",
   "type": "module",
@@ -29,8 +30,5 @@
     "vitest": "^0.24.3",
     "vue": "^3.2.41",
     "vue-tsc": "^1.0.8"
-  },
-  "publishConfig": {
-    "access": "public"
   }
 }
