--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   },
   "prettier": "@myparcel/prettier-config",
   "release": {
-    "extends": "@myparcel/semantic-release-config/github-npm"
+    "extends": "semantic-release-monorepo"
   },
   "devDependencies": {
     "@myparcel/eslint-config": "^3.6.2",
@@ -45,6 +45,8 @@
     "lint-staged": "^13.0.3",
     "nx": "15.0.0",
     "prettier": "^2.7.1",
+    "semantic-release": "^19.0.5",
+    "semantic-release-monorepo": "^7.0.5",
     "tsup": "^6.3.0",
     "typescript": "^4.8.4"
   },
