--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -10,15 +10,28 @@ jobs:
   release:
     name: 'Publish new release 🚀'
     runs-on: ubuntu-22.04
+    env:
+      GITHUB_TOKEN: ${{ secrets.GH_REPO_TOKEN }}
+      NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
     steps:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
 
+      - uses: myparcelnl/actions/yarn2-install@v2
+
+      - name: 'Build packages'
+        run: |
+          yarn build
+
+      - name: 'Switch working directory to core'
+        run: |
+          cd packages/core
+
       - uses: myparcelnl/actions/setup-git-credentials@v2
         with:
           token: ${{ secrets.GH_REPO_TOKEN }}
 
-      - uses: myparcelnl/actions/yarn2-install@v2
-
-      - uses: myparcelnl/actions/semantic-release@v2
+      - name: 'Run semantic release'
+        run: npx semantic-release ${{ inputs.semantic-release-args }}
+        shell: bash
