--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@myparcel/vue-form-builder",
-  "private": true,
   "version": "0.0.0",
+  "private": true,
   "license": "MIT",
   "type": "module",
   "main": "lib/vue-form-builder.umd.cjs",
@@ -23,6 +23,7 @@
     "@vue/devtools-api": "^6.4.4"
   },
   "devDependencies": {
+    "@myparcel/semantic-release-config": "^4.0.0",
     "@vitejs/plugin-vue": "^3.1.2",
     "typescript": "^4.8.4",
     "vite": "^3.1.8",
