--- a/packages/demo/package.json
+++ b/packages/demo/package.json
@@ -1,6 +1,8 @@
 {
   "name": "@myparcel/vue-form-builder-demo",
   "version": "0.0.0",
+  "private": true,
+  "license": "MIT",
   "scripts": {
     "build": "yarn buildOnly",
     "build:dev": "yarn buildOnly --mode development",
