--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -20,13 +20,20 @@ jobs:
 
       - uses: myparcelnl/actions/yarn2-install@v2
 
+      - name: 'Handle build cache'
+        uses: actions/cache@v2
+        id: cache-build
+        with:
+          path: |
+            packages/**/lib
+          key: ${{ runner.os }}-build-${{ hashFiles('packages/**/src/**') }}
+          restore-keys: |
+            ${{ runner.os }}-build-
+
       - name: 'Build packages'
+        if: steps.cache-build.outputs.cache-hit != 'true'
         run: |
           yarn build
-
-      - name: 'Switch working directory to core'
-        run: |
-          cd packages/core
 
       - uses: myparcelnl/actions/setup-git-credentials@v2
         with:
