--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,7 +1,12 @@
 {
   "name": "@myparcel/vue-form-builder",
   "version": "0.0.0",
-  "private": true,
+  "keywords": [
+    "vue",
+    "form-builder",
+    "form"
+  ],
+  "repository": "github:myparcelnl/vue-form-builder",
   "license": "MIT",
   "type": "module",
   "main": "lib/vue-form-builder.umd.cjs",
@@ -31,5 +36,8 @@
     "vitest": "^0.24.3",
     "vue": "^3.2.41",
     "vue-tsc": "^1.0.8"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
