build: run build:dev before serve

--- a/nx.json
+++ b/nx.json
@@ -28,6 +28,9 @@
       ]
     },
     "serve": {
+      "dependsOn": [
+        "^build:dev"
+      ],
       "outputs": [
         "{projectRoot}/lib"
       ]
