--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -30,8 +30,16 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-build-
 
+      - name: 'Handle Nx cache'
+        uses: actions/cache@v2
+        id: cache-nx
+        with:
+          path: node_modules/.cache/nx
+          key: cache-nx-${{ hashFiles('yarn.lock') }}-${{ github.sha }}
+          restore-keys: |
+            cache-nx-${{ hashFiles('yarn.lock') }}-
+
       - name: 'Build packages'
-        if: steps.cache-build.outputs.cache-hit != 'true'
         run: |
           yarn build
 
