--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -13,15 +13,12 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - uses: myparcelnl/actions/pnpm-install@v2
+      - uses: myparcelnl/actions/yarn2-install@v2
+        with:
+          yarn-args: --no-immutable
 
       - run: yarn test
 
       - uses: myparcelnl/actions/update-coverage@v2
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
-
-  docker:
-    container:
-      image: docker/docker:20.10.8
-    runs-on: ubuntu-22.04
