--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@myparcel/vue-form-builder-monorepo",
-  "version": "1.0.0-alpha.1",
+  "version": "1.0.0-alpha.0",
   "private": true,
   "type": "module",
   "main": "lib/vue-form-builder.js",
@@ -17,6 +17,7 @@
     "serve:demo": "nx serve @myparcel/vue-form-builder-demo",
     "serve:watch": "yarn build:dev --watch",
     "test": "nx run-many --target=test",
+    "test:serve": "nx run-many --target=test:serve",
     "typecheck": "nx run-many --target=typecheck",
     "postinstall": "husky install"
   },
@@ -26,21 +27,22 @@
   },
   "prettier": "@myparcel/prettier-config",
   "devDependencies": {
+    "@monodeploy/plugin-github": "^0.6.2",
     "@myparcel/eslint-config": "^3.6.2",
     "@myparcel/prettier-config": "^1.1.0",
-    "@myparcel/semantic-release-config": "^4.0.0",
     "@tsconfig/recommended": "^1.0.1",
     "@typescript-eslint/eslint-plugin": "^5.40.1",
     "@vue/eslint-config-prettier": "^7.0.0",
     "@vue/eslint-config-typescript": "^11.0.2",
     "@vue/tsconfig": "^0.1.3",
+    "conventional-changelog-conventionalcommits": "^5.0.0",
     "eslint": "^8.25.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-vue": "^9.6.0",
     "husky": "^8.0.1",
     "lint-staged": "^13.0.3",
-    "multi-semantic-release": "^3.0.1",
+    "monodeploy": "^3.3.1",
     "nx": "15.0.0",
     "prettier": "^2.7.1",
     "tsup": "^6.3.0",
