--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@myparcel/vue-form-builder",
-  "version": "0.0.0",
+  "version": "1.0.0-alpha.0",
   "keywords": [
     "vue",
     "form-builder",
