--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -17,7 +17,7 @@
     "build:dev": "yarn buildOnly --mode development",
     "buildOnly": "vite build",
     "clean": "rimraf lib",
-    "serve": "tsup --watch",
+    "serve": "vite",
     "typecheck": "vue-tsc --noEmit"
   },
   "dependencies": {
@@ -29,10 +29,8 @@
   "devDependencies": {
     "@myparcel/semantic-release-config": "^4.0.0",
     "@vitejs/plugin-vue": "^3.1.2",
-    "typescript": "^4.8.4",
     "vite": "^3.1.8",
     "vite-plugin-dts": "^1.6.6",
-    "vitest": "^0.24.3",
     "vue": "^3.2.41",
     "vue-tsc": "^1.0.8"
   },
