--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -13,26 +13,28 @@
   "module": "lib/vue-form-builder.js",
   "types": "lib/index.d.ts",
   "scripts": {
-    "build": "yarn buildOnly",
+    "build": "yarn typecheck && yarn buildOnly",
     "build:dev": "yarn buildOnly --mode development",
     "buildOnly": "vite build",
     "clean": "rimraf lib",
     "serve": "vite",
-    "typecheck": "vue-tsc --noEmit"
+    "typecheck": "vue-tsc -p tsconfig.build.json"
   },
   "dependencies": {
     "@myparcel/vue-form-builder-build-tsup": "workspace:*",
     "@myparcel/vue-form-builder-build-vite": "workspace:*",
+    "@myparcel/vue-form-builder-hook-manager": "workspace:*",
     "@myparcel/vue-form-builder-utils": "workspace:*",
     "@vue/devtools-api": "^6.4.4"
   },
   "devDependencies": {
     "@myparcel/semantic-release-config": "^4.0.0",
-    "@vitejs/plugin-vue": "^3.1.2",
-    "vite": "^3.1.8",
+    "@vitejs/plugin-vue": "^3.2.0",
+    "typescript": "^4.8.4",
+    "vite": "^3.2.0",
     "vite-plugin-dts": "^1.6.6",
     "vue": "^3.2.41",
-    "vue-tsc": "^1.0.8"
+    "vue-tsc": "^1.0.9"
   },
   "publishConfig": {
     "access": "public"
