--- a/packages/demo/package.json
+++ b/packages/demo/package.json
@@ -12,19 +12,20 @@
     "typecheck": "vue-tsc --noEmit"
   },
   "dependencies": {
+    "@myparcel/sdk": "^2.8.0",
     "@myparcel/vue-form-builder": "workspace:*",
-    "@vueuse/core": "^9.3.1",
-    "tailwindcss": "^3.1.8",
-    "vue-router": "^4.1.5"
+    "@vueuse/core": "^9.4.0",
+    "tailwindcss": "^3.2.1",
+    "vue-router": "^4.1.6"
   },
   "devDependencies": {
-    "@myparcel/sdk": "^2.8.0",
-    "@vitejs/plugin-vue": "^3.1.2",
+    "@vitejs/plugin-vue": "^3.2.0",
     "autoprefixer": "^10.4.12",
     "postcss": "^8.4.18",
     "sass": "^1.55.0",
-    "vite": "^3.1.8",
+    "typescript": "^4.8.4",
+    "vite": "^3.2.0",
     "vue": "^3.2.41",
-    "vue-tsc": "^1.0.8"
+    "vue-tsc": "^1.0.9"
   }
 }
