--- a/package.json
+++ b/package.json
@@ -13,13 +13,13 @@
     "build:dev": "nx build:dev",
     "buildOnly": "nx buildOnly",
     "clean": "nx run-many --target=clean",
+    "prepare": "is-ci || husky install",
     "serve": "npx concurrently yarn:serve:demo yarn:serve:watch",
     "serve:demo": "nx serve @myparcel/vue-form-builder-demo",
     "serve:watch": "yarn build:dev --watch",
     "test": "vitest run",
     "test:serve": "vitest",
-    "typecheck": "nx run-many --target=typecheck",
-    "postinstall": "husky install"
+    "typecheck": "nx run-many --target=typecheck"
   },
   "lint-staged": {
     "*.{ts,vue}": "eslint --fix",
@@ -32,6 +32,7 @@
     "@myparcel/prettier-config": "^1.1.0",
     "@tsconfig/recommended": "^1.0.1",
     "@typescript-eslint/eslint-plugin": "^5.40.1",
+    "@typescript-eslint/parser": "^5.41.0",
     "@vue/eslint-config-prettier": "^7.0.0",
     "@vue/eslint-config-typescript": "^11.0.2",
     "@vue/tsconfig": "^0.1.3",
@@ -41,6 +42,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-vue": "^9.6.0",
     "husky": "^8.0.1",
+    "is-ci": "^3.0.1",
     "lint-staged": "^13.0.3",
     "monodeploy": "^3.3.1",
     "nx": "15.0.0",
