--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "serve": "npx concurrently yarn:serve:demo yarn:serve:watch",
     "serve:demo": "nx serve @myparcel/vue-form-builder-demo",
     "serve:watch": "yarn build:dev --watch",
-    "test": "vitest run",
+    "test": "vitest run --environment jsdom",
     "test:serve": "vitest",
     "typecheck": "nx run-many --target=typecheck"
   },
@@ -35,6 +35,7 @@
     "@typescript-eslint/parser": "^5.41.0",
     "@vue/eslint-config-prettier": "^7.0.0",
     "@vue/eslint-config-typescript": "^11.0.2",
+    "@vue/test-utils": "^2.2.0",
     "@vue/tsconfig": "^0.1.3",
     "conventional-changelog-conventionalcommits": "^5.0.0",
     "eslint": "^8.25.0",
@@ -43,6 +44,7 @@
     "eslint-plugin-vue": "^9.6.0",
     "husky": "^8.0.1",
     "is-ci": "^3.0.1",
+    "jsdom": "^20.0.1",
     "lint-staged": "^13.0.3",
     "monodeploy": "^3.3.1",
     "nx": "15.0.0",
