--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -12,6 +12,9 @@
   "main": "lib/vue-form-builder.umd.cjs",
   "module": "lib/vue-form-builder.js",
   "types": "lib/index.d.ts",
+  "files": [
+    "lib"
+  ],
   "scripts": {
     "build": "yarn typecheck && yarn buildOnly",
     "build:dev": "yarn buildOnly --mode development",
@@ -31,7 +34,7 @@
     "@myparcel/semantic-release-config": "^4.0.0",
     "@vitejs/plugin-vue": "^3.2.0",
     "typescript": "^4.8.4",
-    "vite": "^3.2.0",
+    "vite": "^3.2.2",
     "vite-plugin-dts": "^1.6.6",
     "vue": "^3.2.41",
     "vue-tsc": "^1.0.9"
