--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -51,4 +51,4 @@ jobs:
             --log-level 0
         env:
           GH_TOKEN: ${{ secrets.GH_REPO_TOKEN }}
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+          NPM_PUBLISH_TOKEN: ${{ secrets.NPM_TOKEN }}
