build(push): update push workflow

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -44,6 +44,14 @@ jobs:
         with:
           token: ${{ secrets.GH_REPO_TOKEN }}
 
+      - name: 'debug'
+        run: |
+          git log --oneline
+
+          ls -la
+          ls -la packages
+          ls -la packages/**/lib
+
       - name: 'Run monodeploy'
         run: |
           yarn monodeploy \
