--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,2 +1,6 @@
 nodeLinker: node-modules
 yarnPath: .yarn/releases/yarn-3.2.4.cjs
+
+npmRegistries:
+  //registry.npmjs.org/:
+    npmAuthToken: "${NPM_TOKEN:-invalid}"
