--- a/package.json
+++ b/package.json
@@ -1,39 +1,54 @@
 {
   "name": "@myparcel/vue-form-builder-monorepo",
-  "version": "1.0.0-alpha.1",
+  "version": "1.0.0-alpha.0",
   "private": true,
+  "repository": "github:myparcelnl/vue-form-builder",
   "type": "module",
   "main": "lib/vue-form-builder.js",
   "types": "lib/src/index.d.ts",
+  "workspaces": [
+    "packages/**"
+  ],
+  "scripts": {
+    "build": "nx build",
+    "build:dev": "nx build:dev",
+    "buildOnly": "nx buildOnly",
+    "clean": "nx run-many --target=clean",
+    "postinstall": "husky install",
+    "prepare": "is-ci || husky install",
+    "serve": "npx concurrently yarn:serve:demo yarn:serve:watch",
+    "serve:demo": "nx serve @myparcel/vue-form-builder-demo",
+    "serve:watch": "yarn build:dev --watch",
+    "test": "vitest run --environment jsdom",
+    "test:serve": "vitest --environment jsdom",
+    "typecheck": "nx run-many --target=typecheck"
+  },
   "lint-staged": {
     "*.{ts,vue}": "eslint --fix",
     "package.json": "npx sort-package-json"
   },
-  "scripts": {
-    "build": "pnpm exec nx run-many --target=build",
-    "buildOnly": "pnpm exec nx run-many --target=buildOnly",
-    "typecheck": "pnpm exec nx run-many --target=typecheck",
-    "dev": "pnpm exec nx run-many --target=dev",
-    "test": "pnpm exec nx run-many --target=test"
-  },
-  "prettier": "@myparcel/prettier-config",
   "devDependencies": {
-    "@myparcel/eslint-config": "^3.6.2",
-    "@myparcel/prettier-config": "^1.1.0",
-    "@nrwl/nx-cloud": "latest",
-    "@nrwl/workspace": "^15.0.0",
+    "@monodeploy/plugin-github": "^0.6.2",
+    "@myparcel-eslint/eslint-config-esnext": "^1.0.0-alpha.2",
+    "@myparcel-eslint/eslint-config-prettier": "^1.0.0-alpha.2",
+    "@myparcel-eslint/eslint-config-prettier-typescript": "^1.0.0-alpha.2",
+    "@myparcel-eslint/eslint-config-prettier-typescript-vue": "^1.0.0-alpha.2",
     "@tsconfig/recommended": "^1.0.1",
-    "@vue/eslint-config-prettier": "^7.0.0",
-    "@vue/eslint-config-typescript": "^11.0.2",
+    "@vue/test-utils": "^2.2.1",
     "@vue/tsconfig": "^0.1.3",
-    "eslint": "^8.25.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-vue": "^9.6.0",
+    "conventional-changelog-conventionalcommits": "^5.0.0",
+    "eslint": "^8.26.0",
     "husky": "^8.0.1",
+    "is-ci": "^3.0.1",
+    "jsdom": "^20.0.2",
     "lint-staged": "^13.0.3",
-    "nx": "15.0.0",
+    "monodeploy": "^3.3.1",
+    "nx": "^15.0.4",
     "prettier": "^2.7.1",
-    "typescript": "^4.8.4"
-  }
+    "tsup": "^6.3.0",
+    "typescript": "^4.8.4",
+    "vitest": "^0.24.4",
+    "vue": "^3.2.41"
+  },
+  "packageManager": "yarn@3.2.4"
 }
