fix: apply lots of fixes

--- a/package.json
+++ b/package.json
@@ -27,12 +27,33 @@
     "*.{ts,vue}": "eslint --fix",
     "package.json": "npx sort-package-json"
   },
+  "prettier": "@myparcel/prettier-config",
+  "resolutions": {
+    "@myparcel-eslint/eslint-config": "portal:/Users/edie/Sites/myparcel/@myparcel-eslint/packages/eslint-config",
+    "@myparcel-eslint/eslint-config-cypress": "portal:/Users/edie/Sites/myparcel/@myparcel-eslint/packages/eslint-config-cypress",
+    "@myparcel-eslint/eslint-config-es5": "portal:/Users/edie/Sites/myparcel/@myparcel-eslint/packages/eslint-config-es5",
+    "@myparcel-eslint/eslint-config-es6": "portal:/Users/edie/Sites/myparcel/@myparcel-eslint/packages/eslint-config-es6",
+    "@myparcel-eslint/eslint-config-esnext": "portal:/Users/edie/Sites/myparcel/@myparcel-eslint/packages/eslint-config-esnext",
+    "@myparcel-eslint/eslint-config-node": "portal:/Users/edie/Sites/myparcel/@myparcel-eslint/packages/eslint-config-node",
+    "@myparcel-eslint/eslint-config-prettier": "portal:/Users/edie/Sites/myparcel/@myparcel-eslint/packages/eslint-config-prettier",
+    "@myparcel-eslint/eslint-config-prettier-typescript": "portal:/Users/edie/Sites/myparcel/@myparcel-eslint/packages/eslint-config-prettier-typescript",
+    "@myparcel-eslint/eslint-config-prettier-typescript-vue": "portal:/Users/edie/Sites/myparcel/@myparcel-eslint/packages/eslint-config-prettier-typescript-vue",
+    "@myparcel-eslint/eslint-config-prettier-vue": "portal:/Users/edie/Sites/myparcel/@myparcel-eslint/packages/eslint-config-prettier-vue",
+    "@myparcel-eslint/eslint-config-tailwindcss": "portal:/Users/edie/Sites/myparcel/@myparcel-eslint/packages/eslint-config-tailwindcss",
+    "@myparcel-eslint/eslint-config-typescript": "portal:/Users/edie/Sites/myparcel/@myparcel-eslint/packages/eslint-config-typescript",
+    "@myparcel-eslint/eslint-config-typescript-vue": "portal:/Users/edie/Sites/myparcel/@myparcel-eslint/packages/eslint-config-typescript-vue",
+    "@myparcel-eslint/eslint-config-vue": "portal:/Users/edie/Sites/myparcel/@myparcel-eslint/packages/eslint-config-vue",
+    "@myparcel-eslint/eslint-config-vue2": "portal:/Users/edie/Sites/myparcel/@myparcel-eslint/packages/eslint-config-vue2",
+    "@myparcel-eslint/eslint-config-vue3": "portal:/Users/edie/Sites/myparcel/@myparcel-eslint/packages/eslint-config-vue3",
+    "@myparcel-eslint/utils": "portal:/Users/edie/Sites/myparcel/@myparcel-eslint/packages/utils"
+  },
   "devDependencies": {
     "@monodeploy/plugin-github": "^0.6.2",
     "@myparcel-eslint/eslint-config-esnext": "^1.0.0-alpha.2",
+    "@myparcel-eslint/eslint-config-node": "^1.0.0-alpha.2",
     "@myparcel-eslint/eslint-config-prettier": "^1.0.0-alpha.2",
-    "@myparcel-eslint/eslint-config-prettier-typescript": "^1.0.0-alpha.2",
-    "@myparcel-eslint/eslint-config-prettier-typescript-vue": "^1.0.0-alpha.2",
+    "@myparcel-eslint/eslint-config-prettier-typescript": "^1.0.0-alpha.1",
+    "@myparcel-eslint/eslint-config-prettier-typescript-vue": "^1.0.0-alpha.1",
     "@tsconfig/recommended": "^1.0.1",
     "@vue/test-utils": "^2.2.1",
     "@vue/tsconfig": "^0.1.3",
