--- a/packages/demo/package.json
+++ b/packages/demo/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0-alpha.0",
   "private": true,
   "license": "MIT",
+  "type": "module",
   "scripts": {
     "build": "yarn buildOnly",
     "build:dev": "yarn buildOnly --mode development",
