--- a/packages/utils/tsconfig.build.json
+++ b/packages/utils/tsconfig.build.json
@@ -1,10 +1,7 @@
 {
-  "extends": "../../tsconfig.json",
-  "include": [
-    "src"
-  ],
+  "extends": "tsconfig.json",
   "exclude": [
-    "**/__tests__/*",
-    "**/*.spec.ts"
+    "src/**/*.spec.ts",
+    "src/__tests__/**/*"
   ]
 }
