--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -7,25 +7,21 @@ on:
       - beta
 
 jobs:
+  test:
+    uses: ./.github/workflows/--test.yml
+    secrets: inherit
+
   release:
     name: 'Publish new release 🚀'
     runs-on: ubuntu-22.04
+    # TODO: uncomment when working from main branch
+    # needs: test
     steps:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
 
       - uses: myparcelnl/actions/yarn2-install@v2
-
-      - name: 'Handle build cache'
-        uses: actions/cache@v3
-        id: cache-build
-        with:
-          path: |
-            packages/**/lib
-          key: ${{ runner.os }}-build-${{ hashFiles('packages/**/src/**') }}
-          restore-keys: |
-            ${{ runner.os }}-build-
 
       - name: 'Handle Nx cache'
         uses: actions/cache@v3
