--- a/package.json
+++ b/package.json
@@ -16,37 +16,29 @@
     "clean": "nx run-many --target=clean",
     "postinstall": "husky install",
     "prepare": "is-ci || husky install",
-    "serve": "npx concurrently yarn:serve:demo yarn:serve:watch",
+    "serve": "yarn build:dev && npx concurrently yarn:serve:demo yarn:serve:watch",
     "serve:demo": "nx serve @myparcel/vue-form-builder-demo",
-    "serve:watch": "yarn build:dev --watch",
-    "test": "vitest run --environment jsdom",
-    "test:serve": "vitest --environment jsdom",
-    "typecheck": "nx run-many --target=typecheck"
+    "serve:watch": "nx run-many --target=watch",
+    "test": "vitest run",
+    "test:serve": "vitest",
+    "typecheck": "nx run-many --target=typecheck",
+    "workspace:clean": "cd $0 && rimraf lib",
+    "workspace:tsup:build": "cd $0 && tsup src/index.ts --dts",
+    "workspace:tsup:build:dev": "cd $0 && tsup src/index.ts --sourcemap --dts",
+    "workspace:tsup:buildOnly": "cd $0 && tsup",
+    "workspace:tsup:typecheck": "cd $0 && tsc src/index.ts --noEmit",
+    "workspace:tsup:watch": "cd $0 && tsup src/index.ts --sourcemap --dts --watch",
+    "workspace:vite:build": "cd $0 && vite build",
+    "workspace:vite:build:dev": "cd $0 && vite build --mode development",
+    "workspace:vite:buildOnly": "cd $0 && vite build",
+    "workspace:vite:typecheck": "cd $0 && vue-tsc --noEmit",
+    "workspace:vite:watch": "cd $0 && vite build --mode development --watch"
   },
   "lint-staged": {
     "*.{ts,vue}": "eslint --fix",
     "package.json": "npx sort-package-json"
   },
   "prettier": "@myparcel/prettier-config",
-  "resolutions": {
-    "@myparcel-eslint/eslint-config": "portal:/Users/edie/Sites/myparcel/@myparcel-eslint/packages/eslint-config",
-    "@myparcel-eslint/eslint-config-cypress": "portal:/Users/edie/Sites/myparcel/@myparcel-eslint/packages/eslint-config-cypress",
-    "@myparcel-eslint/eslint-config-es5": "portal:/Users/edie/Sites/myparcel/@myparcel-eslint/packages/eslint-config-es5",
-    "@myparcel-eslint/eslint-config-es6": "portal:/Users/edie/Sites/myparcel/@myparcel-eslint/packages/eslint-config-es6",
-    "@myparcel-eslint/eslint-config-esnext": "portal:/Users/edie/Sites/myparcel/@myparcel-eslint/packages/eslint-config-esnext",
-    "@myparcel-eslint/eslint-config-node": "portal:/Users/edie/Sites/myparcel/@myparcel-eslint/packages/eslint-config-node",
-    "@myparcel-eslint/eslint-config-prettier": "portal:/Users/edie/Sites/myparcel/@myparcel-eslint/packages/eslint-config-prettier",
-    "@myparcel-eslint/eslint-config-prettier-typescript": "portal:/Users/edie/Sites/myparcel/@myparcel-eslint/packages/eslint-config-prettier-typescript",
-    "@myparcel-eslint/eslint-config-prettier-typescript-vue": "portal:/Users/edie/Sites/myparcel/@myparcel-eslint/packages/eslint-config-prettier-typescript-vue",
-    "@myparcel-eslint/eslint-config-prettier-vue": "portal:/Users/edie/Sites/myparcel/@myparcel-eslint/packages/eslint-config-prettier-vue",
-    "@myparcel-eslint/eslint-config-tailwindcss": "portal:/Users/edie/Sites/myparcel/@myparcel-eslint/packages/eslint-config-tailwindcss",
-    "@myparcel-eslint/eslint-config-typescript": "portal:/Users/edie/Sites/myparcel/@myparcel-eslint/packages/eslint-config-typescript",
-    "@myparcel-eslint/eslint-config-typescript-vue": "portal:/Users/edie/Sites/myparcel/@myparcel-eslint/packages/eslint-config-typescript-vue",
-    "@myparcel-eslint/eslint-config-vue": "portal:/Users/edie/Sites/myparcel/@myparcel-eslint/packages/eslint-config-vue",
-    "@myparcel-eslint/eslint-config-vue2": "portal:/Users/edie/Sites/myparcel/@myparcel-eslint/packages/eslint-config-vue2",
-    "@myparcel-eslint/eslint-config-vue3": "portal:/Users/edie/Sites/myparcel/@myparcel-eslint/packages/eslint-config-vue3",
-    "@myparcel-eslint/utils": "portal:/Users/edie/Sites/myparcel/@myparcel-eslint/packages/utils"
-  },
   "devDependencies": {
     "@monodeploy/plugin-github": "^0.6.2",
     "@myparcel-eslint/eslint-config-esnext": "^1.0.0-alpha.2",
@@ -68,7 +60,7 @@
     "prettier": "^2.7.1",
     "tsup": "^6.3.0",
     "typescript": "^4.8.4",
-    "vitest": "^0.24.4",
+    "vitest": "^0.24.5",
     "vue": "^3.2.41"
   },
   "packageManager": "yarn@3.2.4"
