--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -16,19 +16,19 @@
     "lib"
   ],
   "scripts": {
-    "build": "yarn typecheck && yarn buildOnly",
-    "build:dev": "yarn buildOnly --mode development",
-    "buildOnly": "vite build",
-    "clean": "rimraf lib",
-    "serve": "vite",
-    "typecheck": "vue-tsc -p tsconfig.build.json"
+    "build": "run workspace:vite:build \"$(pwd)\"",
+    "build:dev": "run workspace:vite:build:dev \"$(pwd)\"",
+    "buildOnly": "run workspace:vite:buildOnly \"$(pwd)\"",
+    "clean": "rimraf dist",
+    "serve": "run workspace:vite:serve \"$(pwd)\"",
+    "typecheck": "run workspace:vite:typecheck \"$(pwd)\"",
+    "watch": "run workspace:vite:watch \"$(pwd)\""
   },
   "dependencies": {
-    "@myparcel/vue-form-builder-build-tsup": "workspace:*",
     "@myparcel/vue-form-builder-build-vite": "workspace:*",
     "@myparcel/vue-form-builder-hook-manager": "workspace:*",
     "@myparcel/vue-form-builder-utils": "workspace:*",
-    "@vue/devtools-api": "^6.4.4"
+    "@vue/devtools-api": "^6.4.5"
   },
   "devDependencies": {
     "@myparcel/semantic-release-config": "^4.0.0",
@@ -37,7 +37,8 @@
     "vite": "^3.2.2",
     "vite-plugin-dts": "^1.6.6",
     "vue": "^3.2.41",
-    "vue-tsc": "^1.0.9"
+    "vue-tsc": "^1.0.9",
+    "vue3-async-computed": "^3.0.0"
   },
   "publishConfig": {
     "access": "public"
