--- a/packages/core/tsconfig.build.json
+++ b/packages/core/tsconfig.build.json
@@ -1,6 +1,7 @@
 {
-  "extends": "../../tsconfig.json",
-  "include": [
-    "src"
+  "extends": "./tsconfig.json",
+  "exclude": [
+    "./src/**/*.spec.ts",
+    "./src/__tests__/**/*"
   ]
 }
