--- a/packages/demo/package.json
+++ b/packages/demo/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@myparcel/vue-form-builder-demo",
+  "name": "@myparcel-vfb/demo",
   "version": "1.0.0-alpha.0",
   "private": true,
   "license": "MIT",
