chore: update publish config for packages

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -4,7 +4,8 @@
   "keywords": [
     "vue",
     "form-builder",
-    "form"
+    "form",
+    "vue3"
   ],
   "repository": "github:myparcelnl/vue-form-builder",
   "license": "MIT",
