--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@vue/tsconfig": "^0.1.3",
     "conventional-changelog-conventionalcommits": "^5.0.0",
     "eslint": "^8.26.0",
+    "happy-dom": "^7.6.6",
     "husky": "^8.0.1",
     "is-ci": "^3.0.1",
     "jsdom": "^20.0.2",
