--- a/.github/workflows/--test.yml
+++ b/.github/workflows/--test.yml
@@ -5,10 +5,24 @@ on:
 
 jobs:
   test:
+    name: 'Run unit tests'
     runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v3
 
       - uses: myparcelnl/actions/yarn2-install@v2
 
+      - name: 'Handle NX Cache'
+        uses: myparcelnl/actions/nx-cache@v2
+        with:
+          cache-key: ${{ github.sha }}
+          cache-path: .yarn/cache
 
+      - name: 'Run tests'
+        run: yarn test
+
+      - uses: codecov/codecov-action@v3
+
+      - uses: codacy/codacy-coverage-reporter-action@v1
+        with:
+          project-token: ${{ secrets.CODACY_PROJECT_TOKEN }}
