--- a/package.json
+++ b/package.json
@@ -13,15 +13,15 @@
     "build": "nx build",
     "build:dev": "nx build:dev",
     "buildOnly": "nx buildOnly",
-    "clean": "nx run-many --target=clean",
+    "clean": "nx run-many --target=clean --exclude=.",
     "postinstall": "husky install",
     "prepare": "is-ci || husky install",
     "serve": "yarn build:dev && npx concurrently yarn:serve:demo yarn:serve:watch",
     "serve:demo": "nx serve @myparcel-vfb/demo",
-    "serve:watch": "nx run-many --target=watch",
-    "test": "vitest run",
-    "test:serve": "vitest",
-    "typecheck": "nx run-many --target=typecheck",
+    "serve:watch": "nx run-many --target=watch --exclude=.",
+    "test": "vitest",
+    "test:run": "vitest run --coverage",
+    "typecheck": "nx run-many --target=typecheck --exclude=.",
     "workspace:clean": "cd $0 && rimraf lib",
     "workspace:tsup:build": "cd $0 && tsup src/index.ts --dts",
     "workspace:tsup:build:dev": "cd $0 && tsup src/index.ts --sourcemap --dts",
@@ -47,6 +47,7 @@
     "@myparcel-eslint/eslint-config-prettier-typescript": "^1.0.0-alpha.1",
     "@myparcel-eslint/eslint-config-prettier-typescript-vue": "^1.0.0-alpha.1",
     "@tsconfig/recommended": "^1.0.1",
+    "@vitest/coverage-c8": "^0.25.0",
     "@vue/test-utils": "^2.2.1",
     "@vue/tsconfig": "^0.1.3",
     "conventional-changelog-conventionalcommits": "^5.0.0",
@@ -64,5 +65,8 @@
     "vitest": "^0.24.5",
     "vue": "^3.2.41"
   },
-  "packageManager": "yarn@3.2.4"
+  "packageManager": "yarn@3.2.4",
+  "dependencies": {
+    "@myparcel-vfb/plugin": "workspace:^"
+  }
 }
