--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "build:dev": "nx build:dev",
     "buildOnly": "nx buildOnly",
     "clean": "nx run-many --target=clean --exclude=.",
-    "postinstall": "husky install",
     "prepare": "is-ci || husky install",
     "serve": "yarn build:dev && npx concurrently yarn:serve:demo yarn:serve:watch",
     "serve:demo": "nx serve @myparcel-vfb/demo",
@@ -25,7 +24,7 @@
     "workspace:clean": "cd $0 && rimraf lib",
     "workspace:tsup:build": "cd $0 && tsup src/index.ts --dts",
     "workspace:tsup:build:dev": "cd $0 && tsup src/index.ts --sourcemap --dts",
-    "workspace:tsup:buildOnly": "cd $0 && tsup",
+    "workspace:tsup:buildOnly": "cd $0 && tsup src/index.ts",
     "workspace:tsup:typecheck": "cd $0 && tsc src/index.ts --noEmit",
     "workspace:tsup:watch": "cd $0 && tsup src/index.ts --sourcemap --dts --watch",
     "workspace:vite:build": "cd $0 && vite build",
