--- a/nx.json
+++ b/nx.json
@@ -2,6 +2,7 @@
   "$schema": "./node_modules/nx/schemas/nx-schema.json",
   "defaultBase": "main",
   "defaultProject": "@myparcel/vue-form-builder",
+  "npmScope": "myparcel-vfb",
   "workspaceLayout": {
     "appsDir": "packages",
     "libsDir": "packages"
