--- a/nx.json
+++ b/nx.json
@@ -2,7 +2,7 @@
   "$schema": "./node_modules/nx/schemas/nx-schema.json",
   "defaultBase": "main",
   "defaultProject": "@myparcel/vue-form-builder",
-  "npmScope": "@myparcel",
+  "npmScope": "myparcel-vfb",
   "workspaceLayout": {
     "appsDir": "packages",
     "libsDir": "packages"
@@ -13,7 +13,8 @@
     ],
     "src": [
       "{projectRoot}/src",
-      "{projectRoot}/package.json"
+      "{projectRoot}/package.json",
+      "{projectRoot}/tsconfig.json"
     ]
   },
   "targetDefaults": {
@@ -48,6 +49,14 @@
       "outputs": [
         "default"
       ]
+    },
+    "test": {
+      "inputs": [
+        "{workspaceRoot}/packages/**/*"
+      ],
+      "outputs": [
+        "{workspaceRoot}/coverage"
+      ]
     }
   },
   "tasksRunnerOptions": {
@@ -59,6 +68,7 @@
           "build",
           "build:dev",
           "buildOnly",
+          "test",
           "typecheck"
         ]
       }
