--- a/package.json
+++ b/package.json
@@ -13,19 +13,18 @@
     "build": "nx build",
     "build:dev": "nx build:dev",
     "buildOnly": "nx buildOnly",
-    "clean": "nx run-many --target=clean",
-    "postinstall": "husky install",
+    "clean": "nx run-many --target=clean --exclude=.",
     "prepare": "is-ci || husky install",
     "serve": "yarn build:dev && npx concurrently yarn:serve:demo yarn:serve:watch",
     "serve:demo": "nx serve @myparcel-vfb/demo",
-    "serve:watch": "nx run-many --target=watch",
-    "test": "vitest run",
-    "test:serve": "vitest",
-    "typecheck": "nx run-many --target=typecheck",
+    "serve:watch": "nx run-many --target=watch --exclude=.",
+    "test": "vitest",
+    "test:run": "vitest run --coverage",
+    "typecheck": "nx run-many --target=typecheck --exclude=.",
     "workspace:clean": "cd $0 && rimraf lib",
     "workspace:tsup:build": "cd $0 && tsup src/index.ts --dts",
     "workspace:tsup:build:dev": "cd $0 && tsup src/index.ts --sourcemap --dts",
-    "workspace:tsup:buildOnly": "cd $0 && tsup",
+    "workspace:tsup:buildOnly": "cd $0 && tsup src/index.ts",
     "workspace:tsup:typecheck": "cd $0 && tsc src/index.ts --noEmit",
     "workspace:tsup:watch": "cd $0 && tsup src/index.ts --sourcemap --dts --watch",
     "workspace:vite:build": "cd $0 && vite build",
@@ -50,19 +49,19 @@
     "@vue/test-utils": "^2.2.1",
     "@vue/tsconfig": "^0.1.3",
     "conventional-changelog-conventionalcommits": "^5.0.0",
-    "eslint": "^8.26.0",
-    "happy-dom": "^7.6.6",
-    "husky": "^8.0.1",
+    "eslint": "^8.27.0",
+    "happy-dom": "^7.6.7",
+    "husky": "^8.0.2",
     "is-ci": "^3.0.1",
     "jsdom": "^20.0.2",
     "lint-staged": "^13.0.3",
     "monodeploy": "^3.3.1",
-    "nx": "^15.0.4",
+    "nx": "^15.0.13",
     "prettier": "^2.7.1",
-    "tsup": "^6.3.0",
+    "tsup": "^6.4.0",
     "typescript": "^4.8.4",
-    "vitest": "^0.24.5",
-    "vue": "^3.2.41"
+    "vitest": "^0.25.1",
+    "vue": "^3.2.42"
   },
   "packageManager": "yarn@3.2.4"
 }
