--- a/packages/demo/package.json
+++ b/packages/demo/package.json
@@ -4,6 +4,9 @@
   "private": true,
   "license": "MIT",
   "type": "module",
+  "files": [
+    "lib"
+  ],
   "scripts": {
     "clean": "rimraf dist",
     "serve": "vite",
@@ -13,17 +16,17 @@
     "@myparcel/sdk": "^2.8.0",
     "@myparcel/vue-form-builder": "workspace:*",
     "@vueuse/core": "^9.4.0",
-    "tailwindcss": "^3.2.1",
+    "tailwindcss": "^3.2.2",
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.2.0",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.18",
-    "sass": "^1.55.0",
+    "sass": "^1.56.1",
     "typescript": "^4.8.4",
-    "vite": "^3.2.2",
-    "vue": "^3.2.41",
+    "vite": "^3.2.3",
+    "vue": "^3.2.42",
     "vue-tsc": "^1.0.9"
   }
 }
