--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -27,7 +27,8 @@
   },
   "dependencies": {
     "@myparcel-vfb/hook-manager": "workspace:^1.0.0-alpha.2",
-    "@myparcel-vfb/utils": "workspace:^1.0.0-alpha.2"
+    "@myparcel-vfb/utils": "workspace:^1.0.0-alpha.2",
+    "@myparcel/ts-utils": "^1.0.0-alpha.1"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.2.0",
