--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "clean": "nx run-many --target=clean --exclude=.",
     "prepare": "is-ci || husky install",
     "serve": "yarn build:dev && npx concurrently yarn:serve:demo yarn:serve:watch",
-    "serve:demo": "nx serve @myparcel-vfb/demo",
+    "serve:demo": "nx serve demo",
     "serve:watch": "nx run-many --target=watch --exclude=.",
     "test": "vitest",
     "test:run": "vitest run --coverage",
@@ -46,6 +46,7 @@
     "@myparcel-eslint/eslint-config-prettier-typescript": "^1.0.0-alpha.1",
     "@myparcel-eslint/eslint-config-prettier-typescript-vue": "^1.0.0-alpha.1",
     "@tsconfig/recommended": "^1.0.1",
+    "@vitest/coverage-c8": "^0.25.1",
     "@vue/test-utils": "^2.2.1",
     "@vue/tsconfig": "^0.1.3",
     "conventional-changelog-conventionalcommits": "^5.0.0",
