--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -16,7 +16,9 @@
     ]
   },
   "include": [
-    "./**/*.*"
+    "./**/*.ts",
+    "./**/*.tsx",
+    "./**/*.vue"
   ],
   "exclude": [
     "packages/**/dist",
