--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -26,16 +26,16 @@
     "watch": "run workspace:vite:watch \"$(pwd)\""
   },
   "dependencies": {
-    "@myparcel-vfb/hook-manager": "workspace:^1.0.0-alpha.3",
-    "@myparcel-vfb/utils": "workspace:^1.0.0-alpha.3",
-    "@myparcel/ts-utils": "^1.0.0-alpha.1"
+    "@myparcel-vfb/hook-manager": "workspace:*",
+    "@myparcel-vfb/utils": "workspace:*",
+    "@myparcel/ts-utils": "^1.0.0-alpha.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.2.0",
     "typescript": "^4.8.4",
     "vite": "^3.2.3",
-    "vite-plugin-dts": "^1.7.0",
-    "vue": "^3.2.42",
+    "vite-plugin-dts": "^1.7.1",
+    "vue": "^3.2.45",
     "vue-tsc": "^1.0.9"
   },
   "publishConfig": {
