--- a/packages/demo/package.json
+++ b/packages/demo/package.json
@@ -12,21 +12,27 @@
     "serve": "vite",
     "typecheck": "run workspace:vite:typecheck \"$(pwd)\""
   },
+  "eslintConfig": {
+    "rules": {
+      "vue/no-bare-strings-in-template": "off"
+    }
+  },
   "dependencies": {
-    "@myparcel/sdk": "^2.8.0",
+    "@myparcel/sdk": "^2.8.1",
     "@myparcel/vue-form-builder": "workspace:*",
-    "@vueuse/core": "^9.4.0",
-    "tailwindcss": "^3.2.2",
+    "@vueuse/core": "^9.5.0",
+    "tailwindcss": "^3.2.4",
+    "vue-query": "^1.26.0",
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.2.0",
     "autoprefixer": "^10.4.13",
-    "postcss": "^8.4.18",
+    "postcss": "^8.4.19",
     "sass": "^1.56.1",
     "typescript": "^4.8.4",
     "vite": "^3.2.3",
-    "vue": "^3.2.42",
+    "vue": "^3.2.45",
     "vue-tsc": "^1.0.9"
   }
 }
