fix: update lots of things

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -34,7 +34,7 @@ jobs:
 
       - name: 'Build packages'
         run: |
-          yarn build
+          yarn build --output-style stream
 
       - uses: myparcelnl/actions/setup-git-credentials@v2
         with:
