--- a/.github/workflows/--test.yml
+++ b/.github/workflows/--test.yml
@@ -16,7 +16,7 @@ jobs:
         uses: myparcelnl/actions/nx-cache@v2
 
       - name: 'Run tests'
-        run: yarn test:run
+        run: yarn test:run --coverage
 
       - uses: codecov/codecov-action@v3
 
