--- a/packages/hook-manager/package.json
+++ b/packages/hook-manager/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0-alpha.3",
   "license": "MIT",
   "type": "module",
-  "main": "lib/index.js",
-  "types": "lib/index.d.ts",
+  "main": "./lib/index.js",
+  "types": "./lib/index.d.ts",
   "files": [
     "lib"
   ],
